# Hawk

./: .gitignore  README.md  config.yaml  project_structure.txt
backend/: .gitignore  config.yaml  pyproject.toml
backend/models/: base_model_1_BTCUSDT_1m.pth  transformer_BTCUSDT_1m_config.json
backend/scripts/: backtest.py  backtest_model.py  calculate_indicators.py  create_database.py  init_project.py  setup.sh  sync_market_data.py  train_and_backtest.py  train_model.py  visualize_backtest.py
backend/src/: main.py
backend/src/api/: main.py
backend/src/api/routes/: model.py  model_management.py  trading.py
backend/src/backtesting/: backtest_engine.py
backend/src/config/: config.example.yaml  config.py
backend/src/data/collectors/: base_collector.py  binance_collector.py
backend/src/data/processors/: data_processor.py
backend/src/ml/features/: feature_generator.py
backend/src/ml/models/: base_model.py  ensemble_model.py  losses.py  time_series_model.py
backend/src/ml/models/layers/: base_layer.py  (+8 more)
backend/src/ml/training/: evaluator.py  trainer.py
backend/src/ml/utils/: data_loader.py
backend/src/models/: database.py  risk_management.py
backend/src/models/indicators/: advanced_indicators.py  technical_indicators.py
backend/src/models/risk_management/: position_sizer.py  risk_manager.py
backend/src/models/strategies/: base_strategy.py  grid_trading.py  trend_following.py
backend/src/services/: market_data_service.py  model_service.py  technical_analysis_service.py
backend/src/trading/: trade_executor.py
backend/src/utils/: logger.py
(+32 files in other folders)
